# minigrad

./: .gitignore  README.md  demo.py  pyproject.toml
minigrad/: __init__.py  engine.py  nn.py  viz.py
tests/: test_engine.py
