[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "minigrad"
version = "0.1.0"
description = "A tiny autograd engine with neural network library — built from scratch for learning"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = []

[project.optional-dependencies]
viz = ["graphviz>=0.20"]
dev = ["pytest>=7.0"]
